--- a/_posts/2018-08-17-背包问题总结【01，恰好_不超过，完全，多重，路径记录，应用】.md
+++ b/_posts/2018-08-17-背包问题总结【01，恰好_不超过，完全，多重，路径记录，应用】.md
@@ -37,6 +37,9 @@ for（i=1;i<=n;i++）{
 ```
 
 dp[V]即为最大的价值
+
+
+
 ___
 
 ##### 2.恰好装满时
@@ -166,7 +169,10 @@ ___
 
 前者全0，后者一维：除dp[0]为0外，其余dp[j]都是负无穷；二维：dp\[i][0] = 0（第一列),其余全为0x80000000
 
-4.0-1背包循环边界  i:[1，N]，j:[V，weight[i]]
+4.0-1背包循环边界  i:[1,N]，j:[V,weight[i]]
+
+
+
 ___
 
 ### 更多背包问题
@@ -176,9 +182,12 @@ https://www.liuchuo.net/archives/2323
 
 
 
-</br>
-</br>
-</br>
+<br>
+<br>
+<br>
+
+
+
 ___
 改编自：
 
