--- a/_posts/2018-08-23-字符串类DP【最长公共子序列_子串（考虑允许重复情况），最大子段和（记录路径），最长递增子序列】.md
+++ b/_posts/2018-08-23-字符串类DP【最长公共子序列_子串（考虑允许重复情况），最大子段和（记录路径），最长递增子序列】.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 背包问题总结【01，恰好/不超过，完全，多重，路径记录，应用】
+title: 最长公共子序列（LCS）与最长公共子串（DP）
 date: 2018-08-23
 categories: blog
 tags: [算法类]
