--- a/_posts/2018-08-23-字符串类DP【最长公共子序列_子串（考虑允许重复情况），最大子段和（记录路径），最长递增子序列】.md
+++ b/_posts/2018-08-23-字符串类DP【最长公共子序列_子串（考虑允许重复情况），最大子段和（记录路径），最长递增子序列】.md
@@ -12,15 +12,19 @@ header-img: "img/article3.jpg"
 
 ### 最长公共子序列（LCS）与最长公共子串（DP）
 
-##### 1.子串与子序列的区别
+#### 1.子串与子序列的区别
+
 这里给出一个例子：有两个母串
 
  - cnblogs
  - belong
 
 比如序列bo, bg, lg在母串cnblogs与belong中都出现过并且出现顺序与母串保持一致，我们将其称为公共子序列。最长公共子序列（Longest Common Subsequence,LCS），顾名思义，是指在所有的子序列中最长的那一个。子串是要求更严格的一种子序列，要求在母串中连续地出现。在上述例子的中，**最长公共子序列为blog（cnblogs,belong），最长公共子串为lo（cnblogs, belong）**。
-##### 2.DP状态转移方程
-###### 最长公共子序列（LCS）：
+
+#### 2.DP状态转移方程
+
+最长公共子序列（LCS）：
+
 二维数组c\[i][j]记录串x1x2⋯xi与y1y2⋯yj的LCS长度，得到转移方程
 
 ![最长公共子序列](http://ovfvfmquv.bkt.clouddn.com/20161116110820862)
@@ -48,7 +52,7 @@ int lcs(String str1, String str2) {
 算法复杂度等于将所给两个字符串各扫一遍，故为o(m*n)
 ___
 
-###### 最长公共子串（DP）：
+##### 最长公共子串（DP）：
 与子序列的不同仅在于当Xi不等于Yj时，对应的dp记为0
 二维数组c\[i][j]用来表示以XiYj为结尾的公共子串的长度（注意此处的dp还需要找其中公共子串的最大值），得到转移方程
 ![最长公共子串](http://ovfvfmquv.bkt.clouddn.com/20161116111138893)
