--- a/_posts/2018-08-23-字符串类DP【最长公共子序列_子串（考虑允许重复情况），最大子段和（记录路径），最长递增子序列】.md
+++ b/_posts/2018-08-23-字符串类DP【最长公共子序列_子串（考虑允许重复情况），最大子段和（记录路径），最长递增子序列】.md
@@ -79,6 +79,8 @@ int lcs(String str1, String str2) {
     return result;  
 } 
 ```
+###### 最长回文串问题
+可转换为最长子串问题，即将原始序列reverse，再求解该序列和原序列的最长公共子串即可，例题见：[PAT 1040](https://pintia.cn/problem-sets/994805342720868352/problems/994805446102073344)
 ___
 
 ### 允许重复元素的LCS
