--- a/_posts/2018-11-29-关于保研——写在最前面.md
+++ b/_posts/2018-11-29-关于保研——写在最前面.md
@@ -12,6 +12,8 @@ header-img: "img/article3.jpg"
 
 摸黑过河还是挺难的，至今任清晰地记得当我还在大一，刚知道保研推免这个概念时，我的学长们告诉我很难很难。但现在我可以很负责地对我的学弟学妹们说，**其实并没有那么难**。
 
+![最长公共子序列](http://www.tulip-quant.link/%E7%8C%AB%E7%88%AA.jpeg)
+
 # 一、为什么保研
 这是所有想保研的同学最该思考清楚的问题，保研的目的究竟是什么，于我而言，原因如下（按优先级排列）：
 ~~~
