--- a/_posts/2018-11-29-关于保研——写在最前面.md
+++ b/_posts/2018-11-29-关于保研——写在最前面.md
@@ -3,7 +3,7 @@ layout: post
 title: 关于保研——写在最前面
 date: 2018-11-29
 categories: blog
-tags: [Coding Life]
+tags: [随笔 Coding Life]
 description: "关于保研——写在最前面"
 header-img: "img/article3.jpg"
 ---
