--- a/_posts/2018-12-31-2018年终复盘.md
+++ b/_posts/2018-12-31-2018年终复盘.md
@@ -3,7 +3,7 @@ layout: post
 title: 2018年终复盘
 date: 2018-12-31
 categories: blog
-tags: [Coding Life]
+tags: [随笔 Coding Life]
 description: "2018年终总结。"
 header-img: "img/article3.jpg"
 ---
