--- a/_posts/2018-11-29-关于保研——写在最前面.md
+++ b/_posts/2018-11-29-关于保研——写在最前面.md
@@ -69,6 +69,6 @@ header-img: "img/article3.jpg"
 > 机试定江山，毫不夸张
 
 
-*我的推免经历（清北复交浙）见后序博文*
+*我的推免经历（清北复交浙）见[后序博文](https://zc-apiao.world/blog/2018/12/24/2018-%E6%B8%85%E5%8C%97%E5%A4%8D%E4%BA%A4%E6%B5%99-%E8%AE%A1%E7%AE%97%E6%9C%BA_%E8%BD%AF%E4%BB%B6-%E6%8E%A8%E5%85%8D%E7%BB%8F%E5%8E%86/)*
 
 
