--- a/_posts/2018-12-24-2018 清北复交浙 计算机_软件 推免经历.md
+++ b/_posts/2018-12-24-2018 清北复交浙 计算机_软件 推免经历.md
@@ -8,6 +8,8 @@ description: "记录推免一路走来的感想，非传统意义上的面经，
 header-img: "img/article3.jpg"
 ---
 
+建议配合[关于保研——写在最前面](https://zc-apiao.world/blog/2018/11/29/%E5%85%B3%E4%BA%8E%E4%BF%9D%E7%A0%94-%E5%86%99%E5%9C%A8%E6%9C%80%E5%89%8D%E9%9D%A2/)食用
+
 最后的offer：复旦软院，交大软院，浙大软院
 
 > 至于为啥都选软院，柿子还挑软的捏，其实在大部分的院校，软院和计院功能高度重合，你想学的方向相信我，软院计院都会有的(不信可以去相关学校的官网看两个学院老师的简介与方向)
