--- a/_posts/2018-11-29-关于保研——写在最前面.md
+++ b/_posts/2018-11-29-关于保研——写在最前面.md
@@ -68,7 +68,6 @@ header-img: "img/article3.jpg"
 **补充一点**：大部分学校的流程分为都会有自己的机试，机试很重要! 很重要! 很重要！一来它是给面试老师的第一印象，二来直接体现出了你的代码能力
 > 机试定江山，毫不夸张
 
-
-*我的推免经历（清北复交浙）见[后序博文](https://zc-apiao.world/blog/2018/12/24/2018-%E6%B8%85%E5%8C%97%E5%A4%8D%E4%BA%A4%E6%B5%99-%E8%AE%A1%E7%AE%97%E6%9C%BA_%E8%BD%AF%E4%BB%B6-%E6%8E%A8%E5%85%8D%E7%BB%8F%E5%8E%86/)*
+*我的推免经历（清北复交浙）见【[2018 清北复交浙 计算机/软件 推免经历](https://zc-apiao.world/blog/2018/12/24/2018-%E6%B8%85%E5%8C%97%E5%A4%8D%E4%BA%A4%E6%B5%99-%E8%AE%A1%E7%AE%97%E6%9C%BA_%E8%BD%AF%E4%BB%B6-%E6%8E%A8%E5%85%8D%E7%BB%8F%E5%8E%86/)】*
 
 
