--- a/_posts/2019-03-09-深入理解单例模式的三大要素（最容易忽略的构造函数）.md
+++ b/_posts/2019-03-09-深入理解单例模式的三大要素（最容易忽略的构造函数）.md
@@ -37,8 +37,8 @@ public class Singleton {
 
 ## 第二个要素
 另一个要素也不难理解，即将单例声明成volatile以防止指令重排序造成的意外情况，贴上《Java并发编程的艺术》中对其的解释：
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20190309141328297.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM3MTkzNzA1,size_16,color_FFFFFF,t_70)
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20190309141337582.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM3MTkzNzA1,size_16,color_FFFFFF,t_70)
+![在这里插入图片描述](https://apiao-1258505467.cos.ap-chengdu.myqcloud.com/blog_pic/singleton_volatile1.png)
+![在这里插入图片描述](https://apiao-1258505467.cos.ap-chengdu.myqcloud.com/blog_pic/singleton_volatile2.png)
 固此处需要加volatile，依赖其添加的内存屏障以强制屏蔽编译器和JIT的优化工作。
 
 ## 第三个要素（很重要）
