--- a/_posts/2018-10-28-SpringMVC 实现抽奖活动（2.基于for update悲观锁Version1）.md
+++ b/_posts/2018-10-28-SpringMVC 实现抽奖活动（2.基于for update悲观锁Version1）.md
@@ -97,3 +97,10 @@ header-img: "img/article3.jpg"
 
 <br>
 
+### 2019.3.16更新
+
+昨天阿里一面在说悲观锁版本的时候，对Spring的事务机制有所遗忘，当时想for update 这个语句执行完锁不是释放了吗，怎么保证并发？然后想到所以要把它包在一个事务里边，即通过`@Transaction`注解。
+
+当时不确定在一个标签内是否就会等跑完这一段事务才释放锁，现贴一个前人做的实验[数据库中for update的使用](https://blog.csdn.net/qiuhan/article/details/51179808)，证实@Transaction作用和数据库中的开始事务类似，而在代码结束之后会自动提交，因此如果在代码中加了for update的锁，这个锁会持续整个事务的生命周期。
+
+> 这也是为什么不推荐使用for update的原因，1.若在里面对多个资源加了锁，容易导致死锁；2.性能低，其实质是对索引加的锁，因此其他的地方如果想要通过这个索引获得别的行的数据也是会被阻塞的
